--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon backend/server.js"
   },
   "dependencies": {
+    "@getbrevo/brevo": "^4.0.1",
     "body-parser": "^2.2.1",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
